finish part 4 in python

--- a/Stepik/Interactive_SQL_Trainer/1.5_base_SelectCorect.md
+++ b/Stepik/Interactive_SQL_Trainer/1.5_base_SelectCorect.md
@@ -8,7 +8,7 @@
 [Запросы на обновление нескольких столбцов](#T5)<br>
 [Запросы на обновление нескольких таблиц](#T6)<br>
 [Запросы на удаление (DELETE)](#T7)<br>
-[Запросы на создание таблицы](#T8)<br>
+[Запросы на создание таблицы (CREATE TABLE)](#T8)<br>
 
 
 
