sql tutorial add some title

--- a/Stepik/Interactive_SQL_Trainer/1.2_base_SelectData.md
+++ b/Stepik/Interactive_SQL_Trainer/1.2_base_SelectData.md
@@ -2,16 +2,16 @@
 
 ### Содержание <br>
 
-[Выборка всех данных из таблицы](#T1) <br>
+[Выборка всех данных из таблицы SELECT, FROM](#T1) <br>
 [Выборка отдельных столбцов](#T2) <br>
-[Выборка столбцов и присвоение им новых имен](#T3) <br>
+[Выборка столбцов и присвоение им новых имен AS](#T3) <br>
 [Выборка данных с созданием вычисляемого столбца](#T4) <br>
-[Вычисляемые столбцы, математические функции](#T5)<br>
-[Вычисляемые столбцы, логические функции](#T6)<br>
-[Выборка данных по условию](#T7)<br>
-[Логические операции](#T8)<br>
+[Вычисляемые столбцы, математические функции ROUND](#T5)<br>
+[Вычисляемые столбцы, логические функции  IF](#T6)<br>
+[Выборка данных по условию WHERE](#T7)<br>
+[Логические операции NOT, AND, OR](#T8)<br>
 [Операторы BETWEEN, IN](#9)<br>
-[Выборка с сортировкой](#T10)<br>
+[Выборка с сортировкой ORDER BY, ASC, DESC](#T10)<br>
 [Оператор LIKE](#T11)<br>
 
 <br><a name="T1"></a>
@@ -19,9 +19,9 @@
 
 Для того чтобы отобрать все данные из таблицы используется SQL запрос следующей структуры:
 
-+ ключевое слово `SELECT`; 
-+ символ « `*` » ; 
-+ ключевое слово `FROM`; 
++ ключевое слово `SELECT`;
++ символ « `*` » ;
++ ключевое слово `FROM`;
 + имя таблицы.
 
 Результатом является таблица, в которую включены все строки и столбцы указанной в запросе таблицы.
@@ -39,9 +39,9 @@ ___
 <br><a name="T2"></a>
 # Выборка отдельных столбцов
 
-* ключевое слово `SELECT` ; 
-* список столбцов таблицы через запятую; 
-* ключевое слово `FROM` ; 
+* ключевое слово `SELECT` ;
+* список столбцов таблицы через запятую;
+* ключевое слово `FROM` ;
 * имя таблицы.
 
 #### **Пример.** Выбрать названия книг и их количества из таблицы `book` .
@@ -50,13 +50,13 @@ ___
 SELECT title, amount FROM book;
 
 -- Результат
-+-----------------------+--------+ 
++-----------------------+--------+
 |title                  | amount |
-+-----------------------+--------+ 
-| Мастер и Маргарита    | 3      | 
-| Белая гвардия         | 5      | 
-| Идиот                 | 10     | 
-| Братья Карамазовы     | 2      | 
++-----------------------+--------+
+| Мастер и Маргарита    | 3      |
+| Белая гвардия         | 5      |
+| Идиот                 | 10     |
+| Братья Карамазовы     | 2      |
 | Стихотворения и поэмы | 15     |
 +-----------------------+--------+
 ```
@@ -64,14 +64,14 @@ ___
 <br><a name="T3"></a>
 # Выборка столбцов и присвоение им новых имен
 
-* ключевое слово `SELECT` ; 
+* ключевое слово `SELECT` ;
 * имя столбца;
-* ключевое слово `AS` ; 
-* новое название столбца (можно русскими буквами), но это должно быть одно слово, вместо пробела использовать "_" ; 
-* запятая; 
-* имя столбца; 
+* ключевое слово `AS` ;
+* новое название столбца (можно русскими буквами), но это должно быть одно слово, вместо пробела использовать "_" ;
+* запятая;
+* имя столбца;
 * ....
-* ключевое слово FROM ; 
+* ключевое слово FROM ;
 * имя таблицы.
 
 Результатом является таблица, в которую включены все данные из указанных после `SELECT` столбцов исходной таблицы. Каждому столбцу присваивается новое имя, заданное после `AS`, или столбец получает имя столбца исходной таблицы, если `AS` отсутствует.
@@ -83,9 +83,9 @@ FROM book;
 -- Результат
 +-----------------------+------------+
 | Название              | Количество |
-+-----------------------+------------+ 
++-----------------------+------------+
 | Мастер и Маргарита    | 3          |
-| Белая гвардия         | 5          | 
+| Белая гвардия         | 5          |
 | Идиот                 | 10         |
 | Братья Карамазовы     | 2          |
 | Стихотворения и поэмы | 15         |
@@ -101,20 +101,20 @@ ___
 #### **Пример.** Посчитать стоимость (произведение цены на количество). Вычисляемому столбцу дать имя `total`.
 
 ```SQL
-SELECT price, amount, 
-     price * amount AS total 
+SELECT price, amount,
+     price * amount AS total
 FROM book;
 
 -- Результат
-+--------+--------+---------+ 
-| price  | amount | total   | 
-+--------+--------+---------+ 
-| 670.99 | 3      | 2012.97 | 
-| 540.50 | 5      | 2702.50 | 
-| 460.00 | 10     | 4600.00 | 
-| 799.01 | 2      | 1598.02 | 
++--------+--------+---------+
+| price  | amount | total   |
++--------+--------+---------+
+| 670.99 | 3      | 2012.97 |
+| 540.50 | 5      | 2702.50 |
+| 460.00 | 10     | 4600.00 |
+| 799.01 | 2      | 1598.02 |
 | 650.00 | 15     | 9750.00 |
-+--------+--------+---------+ 
++--------+--------+---------+
 ```
 ___
 <br><a name="T5"></a>
@@ -146,7 +146,7 @@ ___
 #### **Пример.** Для каждой книги из таблицы `book` установим скидку следующим образом: если количество книг меньше 4, то скидка будет составлять 50% от цены, в противном случае 30%.
 
 ```SQL
-SELECT title, amount, price, 
+SELECT title, amount, price,
     IF(amount<4, price*0.5, price*0.7) AS sale
 FROM book;
 
@@ -193,7 +193,7 @@ ___
 #### **Пример.** Вывести название и цену тех книг, цены которых меньше 600 рублей.
 
 ```SQL
-SELECT title, price 
+SELECT title, price
 FROM book
 WHERE price < 600;
 
@@ -239,7 +239,7 @@ ___
 #### **Пример.** Вывести название, автора и цену тех книг, которые написал Булгаков, ценой больше 600 рублей
 
 ```SQL
-SELECT title, author, price 
+SELECT title, author, price
 FROM book
 WHERE price > 600 AND author = 'Булгаков М.А.';
 
@@ -254,7 +254,7 @@ WHERE price > 600 AND author = 'Булгаков М.А.';
 #### **Пример.** Вывести название, цену  тех книг, которые написал Булгаков или Есенин, ценой больше 600 рублей
 
 ```SQL
-SELECT title, author, price 
+SELECT title, author, price
 FROM book
 WHERE (author = 'Булгаков М.А.' OR author = 'Есенин С.А.') AND price > 600;
 
@@ -278,7 +278,7 @@ ___
 #### **Пример** Выбрать названия и количества тех книг, количество которых от 5 до 14 включительно.
 
 ```SQL
-SELECT title, amount 
+SELECT title, amount
 FROM book
 WHERE amount BETWEEN 5 AND 14;
 
@@ -299,7 +299,7 @@ WHERE amount >= 5 AND amount <=14;
 #### **Пример** Выбрать названия и цены книг, написанных Булгаковым или Достоевским.
 
 ```SQL
-SELECT title, price 
+SELECT title, price
 FROM book
 WHERE author IN ('Булгаков М.А.', 'Достоевский Ф.М.');
 
@@ -320,7 +320,7 @@ ___
 <br><a name="T10"></a>
 # Выборка данных с сортировкой
 
-При выборке можно указывать столбец или несколько столбцов, по которым необходимо отсортировать отобранные строки. Для этого используются ключевые слова `ORDER BY`, после которых задаются имена столбцов. При этом строки сортируются по первому столбцу, если указан второй столбец, сортировка осуществляется только для тех строк, у которых значения первого столбца одинаковы. По умолчанию `ORDER BY` выполняет сортировку по возрастанию. Чтобы управлять направлением сортировки вручную, после имени столбца указывается ключевое слово `ASC` (по возрастанию) или `DESC` (по убыванию). 
+При выборке можно указывать столбец или несколько столбцов, по которым необходимо отсортировать отобранные строки. Для этого используются ключевые слова `ORDER BY`, после которых задаются имена столбцов. При этом строки сортируются по первому столбцу, если указан второй столбец, сортировка осуществляется только для тех строк, у которых значения первого столбца одинаковы. По умолчанию `ORDER BY` выполняет сортировку по возрастанию. Чтобы управлять направлением сортировки вручную, после имени столбца указывается ключевое слово `ASC` (по возрастанию) или `DESC` (по убыванию).
 
 #### **Пример** Вывести название, автора и цены книг. Информацию  отсортировать по названиям книг в алфавитном порядке.
 
@@ -379,10 +379,10 @@ ___
 #### **Пример** Вывести названия книг, начинающихся с буквы «Б».
 
 ```SQL
-SELECT title 
+SELECT title
 FROM book
 WHERE title LIKE 'Б%';
--- эквивалентное условие 
+-- эквивалентное условие
 title LIKE 'б%'
 
 -- результат:
@@ -398,7 +398,7 @@ title LIKE 'б%'
 #### **Пример** Вывести название книг, состоящих ровно из 5 букв.
 
 ```SQL
-SELECT title FROM book 
+SELECT title FROM book
 WHERE title LIKE "_____"
 
 -- результат
@@ -415,7 +415,7 @@ WHERE title LIKE "_____"
 #### **Пример** Вывести книги, название которых длиннее 5 символов:
 
 ```SQL
-SELECT title FROM book 
+SELECT title FROM book
 WHERE title LIKE "______%";
 
 -- эквивалентно
@@ -442,8 +442,8 @@ title LIKE "%______%"
 #### **Пример** Вывести названия книг, которые состоят ровно из одного слова, если считать, что слова в названии отделяются друг от друга пробелами .
 
 ```SQL
-SELECT title FROM book 
-WHERE title NOT LIKE "% %";    
+SELECT title FROM book
+WHERE title NOT LIKE "% %";
 
 -- результат
 +--------+
