sql tutorial add some title

--- a/Stepik/Interactive_SQL_Trainer/1.3_base_SelectGroup.md
+++ b/Stepik/Interactive_SQL_Trainer/1.3_base_SelectGroup.md
@@ -1,7 +1,7 @@
 # Запросы, групповые операции
 
 ### Содержание <br>
-[Выбор уникальных элементов столбца](#T1) <br>
+[Выбор уникальных элементов столбца DISTINCT, GROUP BY](#T1) <br>
 [Выборка данных, групповые функции SUM и COUNT](#T2) <br>
 [Выборка данных, групповые функции MIN, MAX и AVG](#T3)<br>
 [Выборка данных c вычислением, групповые функции](#T4)<br>
@@ -24,7 +24,7 @@
 6 |	Стихотворения и поэмы|	Есенин С.А.|	650.00|	15|
 
 
-<br><a name="T1"></a> 
+<br><a name="T1"></a>
 # Выбор уникальных элементов столбца
 
 `DISTINCT` - используется для того, чтобы отобрать уникальные элементы некоторого столбца. Размещается сразу после `SELECT`
@@ -57,7 +57,7 @@ GROUP BY author;
 ___
 
 
-<br><a name="T2"></a> 
+<br><a name="T2"></a>
 # Выборка данных, групповые функции SUM и COUNT
 
 При группировке, можно выполнить различные действия, например, **просуммировать** `SUM` их или найти **количество** `COUNT` элементов в группе.
@@ -105,7 +105,7 @@ GROUP BY author;
 ___
 
 
-<br><a name="T3"></a> 
+<br><a name="T3"></a>
 # Выборка данных, групповые функции MIN, MAX и AVG
 
 `MIN()`, `MAX()` и `AVG()`, вычисляют минимальное, максимальное и среднее значение элементов столбца, относящихся к группе.
@@ -113,9 +113,9 @@ ___
 #### **Пример** Вывести минимальную цену книги каждого автора
 
 ```SQL
-SELECT author, 
-    MIN(price) AS Минимальная_цена, 
-    MAX(price) AS Максимальная_цена, 
+SELECT author,
+    MIN(price) AS Минимальная_цена,
+    MAX(price) AS Максимальная_цена,
     ROUND(AVG(price),2) AS Средняя_цена
 FROM book
 GROUP BY author;
@@ -163,7 +163,7 @@ ___
 #### **Пример** Посчитать общее количество экземпляров книг на складе и их стоимость .
 
 ```SQL
-SELECT SUM(amount) AS Количество, 
+SELECT SUM(amount) AS Количество,
     SUM(price * amount) AS Стоимость
 FROM book;
 
@@ -185,11 +185,11 @@ ___
 
 ```SQL
 SELECT author,
-    MIN(price) AS Минимальная_цена, 
+    MIN(price) AS Минимальная_цена,
     MAX(price) AS Максимальная_цена
 FROM book
 GROUP BY author
-HAVING SUM(price * amount) > 5000; 
+HAVING SUM(price * amount) > 5000;
 
 
 --результат:
@@ -207,11 +207,11 @@ HAVING SUM(price * amount) > 5000;
 
 ```SQL
 SELECT author,
-    MIN(price) AS Минимальная_цена, 
+    MIN(price) AS Минимальная_цена,
     MAX(price) AS Максимальная_цена
 FROM book
 GROUP BY author
-HAVING SUM(price * amount) > 5000 
+HAVING SUM(price * amount) > 5000
 ORDER BY Минимальная_цена DESC;
 
 
@@ -225,7 +225,7 @@ ORDER BY Минимальная_цена DESC;
 +------------------+------------------+-------------------+
 ```
 
-> Если  столбцу присвоено имя с помощью AS, то можно использовать это имя при указании столбца, по которому выполняется сортировка 
+> Если  столбцу присвоено имя с помощью AS, то можно использовать это имя при указании столбца, по которому выполняется сортировка
 ___
 
 
@@ -242,7 +242,7 @@ ___
 
 Сначала определяется таблица, из которой выбираются данные `FROM`, затем из этой таблицы отбираются записи в соответствии с условием  `WHERE`, выбранные данные агрегируются `GROUP BY`,  из агрегированных записей выбираются те, которые удовлетворяют условию после `HAVING`. Потом формируются данные результирующей выборки, как это указано после `SELECT` ( вычисляются выражения, присваиваются имена и пр. ). Результирующая выборка сортируется, как указано после `ORDER BY`.
 
-#### **Пример** Вывести максимальную и минимальную цену книг каждого автора, кроме Есенина, количество экземпляров книг которого больше 10. 
+#### **Пример** Вывести максимальную и минимальную цену книг каждого автора, кроме Есенина, количество экземпляров книг которого больше 10.
 
 ```SQL
 SELECT author,
