--- a/Stepik/Interactive_SQL_Trainer/1.5_base_SelectCorect.md
+++ b/Stepik/Interactive_SQL_Trainer/1.5_base_SelectCorect.md
@@ -3,12 +3,12 @@
 ### Содержание <br>
 [Создание пустой таблицы CREATE TABLE](#T1)<br>
 [Добавление записей в таблицу INSERT INTO, VALUES](#T2)<br>
-[Добавление записей из другой таблицы, вложенные запросы](#T3)<br>
+[Добавление записей из другой таблицы, вложенные запросы (INSERT INTO ... SELECT...)](#T3)<br>
 [Запросы на обновление (операторы UPDATE и SET)](#T4)<br>
 [Запросы на обновление нескольких столбцов](#T5)<br>
 [Запросы на обновление нескольких таблиц](#T6)<br>
 [Запросы на удаление (DELETE FROM)](#T7)<br>
-[Запросы на создание таблицы (CREATE TABLE)](#T8)<br>
+[Запросы на создание таблицы (INSERT INTO ... SELECT...)](#T8)<br>
 
 
 
